Fixed nav alignment on touch devices. Closed #48

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -158,8 +158,7 @@ footer .icon-campus:after {
 nav.submenu {
 	display: none;
 	float: none;
-	width: 98%;
-	padding: 1%;
+	width: 100%;
 	background: #383838;
 }
 
