--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ nav.submenu ul {
 nav.submenu a {
 	border-left: 2px solid transparent;
 	padding-left: 5px;
-	margin-left: 5px;
+	margin-left: 8px;
 	margin-bottom: 10px;
 	display: block;
 
